[gd_scene load_steps=4 format=2]

[ext_resource path="res://enemies/common/base/enemyBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/common/enemyB/EnemyB.gd" type="Script" id=2]
[ext_resource path="res://enemies/common/enemyB/EnemyBGenerator.gd" type="Script" id=3]

[node name="EnemyB" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Generator" parent="." index="2"]
script = ExtResource( 3 )

[node name="MovementTween" type="Tween" parent="." index="4"]

[node name="MovementDelayTimer" type="Timer" parent="." index="5"]
wait_time = 0.001
one_shot = true
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="6"]

[connection signal="timeout" from="MovementDelayTimer" to="." method="_on_MovementDelayTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
